welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
setBrosseCouleur(Color.blue)
baisseBrosse()
gauche() // début barre haut
avance()
avance()
avance()
avance() // fin barre haut
gauche() // début barre verticale
avance()
avance()
avance()
avance() // fin barre verticale
gauche() //début barre bas
avance()
avance()
avance()
avance() // fin barre bas
gauche() // début barre droite
avance()
avance() // fin barre droite
gauche()
avance()
leveBrosse() // fin marquage
droite()
avance()
avance()
droite()
avance()
gauche() // fin